Atualizei o projeto Amparo na Rua com melhorias na página inicial

--- a/projetos.html
+++ b/projetos.html
@@ -6,6 +6,7 @@
   <title>Projetos - Amparo na Rua</title>
 </head>
 <body>
+
   <header>
     <h1>Projetos Amparo na Rua</h1>
     <nav>
@@ -18,27 +19,49 @@
   </header>
 
   <main>
+
     <article>
       <h2>Refeição Solidária</h2>
       <p>Servimos diariamente refeições nutritivas e gratuitas para pessoas em situação de rua, com o apoio de voluntários e doações.</p>
-      <img src="img/voluntarios.jpg" alt="Voluntários distribuindo refeições para pessoas em situação de rua">
+      <div align="center">
+        <img src="img/doacoes.jpg" alt="Doações de alimentos" width="400">
+      </div>
     </article>
 
     <article>
       <h2>Acolhimento e Reintegração</h2>
       <p>Nosso abrigo oferece um espaço seguro, cuidados básicos e apoio psicológico. Também auxiliamos na busca de emprego e documentação.</p>
-      <img src="img/abrigo.jpg" alt="Abrigo comunitário da ONG Amparo na Rua">
+      <div align="center">
+        <img src="img/abrigo.jpg" alt="Abrigo comunitário" width="400">
+      </div>
     </article>
 
-    <article>
-      <h2>Como Ajudar</h2>
-      <p>Você pode colaborar doando alimentos, roupas, produtos de higiene ou recursos financeiros. Toda ajuda faz diferença!</p>
-      <img src="img/doacao.jpg" alt="Pessoa realizando doação de alimentos e roupas">
+    <article id="voluntariado">
+      <h2>Voluntariado - Como você pode ajudar</h2>
+      <p>Você pode fazer a diferença! Os voluntários ajudam em diversas atividades. Ao se cadastrar, você poderá informar suas habilidades e escolher a forma de ajudar que mais combina com você.</p>
+      
+      <ul>
+        <li>Distribuição de refeições</li>
+        <li>Apoio no abrigo</li>
+        <li>Ensino e orientação profissional</li>
+        <li>Organização de eventos e campanhas</li>
+        <li>Campanhas de arrecadação de roupas e alimentos</li>
+        <li>Divulgação e engajamento nas redes sociais</li>
+        <li>Orientação e apoio social</li>
+      </ul>
+
+      <p>Se você quer fazer parte dessa transformação, <a href="cadastro.html">cadastre-se aqui</a> e venha ajudar!</p>
+
+      <div align="center">
+        <img src="img/voluntarios.jpg" alt="Voluntários em ação" width="400">
+      </div>
     </article>
+
   </main>
 
   <footer>
     <p>&copy; 2025 Amparo na Rua</p>
   </footer>
+
 </body>
 </html>
