--- a/cadastro.html
+++ b/cadastro.html
@@ -2,65 +2,91 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Amparo na Rua - Cadastro de Voluntários e Doadores</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cadastro de Voluntários e Doadores - Amparo na Rua</title>
 </head>
 <body>
 
-  <h1>Cadastro de Voluntários e Doadores</h1>
+  <header>
+    <h1>Cadastro de Voluntários e Doadores</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="projetos.html">Projetos</a></li>
+        <li><a href="cadastro.html">Cadastro</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <nav>
-    <ul>
-      <li><a href="index.html">Início</a></li>
-      <li><a href="projetos.html">Projetos</a></li>
-      <li><a href="cadastro.html">Cadastro</a></li>
-    </ul>
-  </nav>
+  <main>
+    <section>
+      <h2>Informações Pessoais</h2>
+      <form action="processar_cadastro.php" method="POST">
+        <label for="nome">Nome Completo:</label>
+        <input type="text" id="nome" name="nome" required><br><br>
 
-  <form>
-    <fieldset>
-      <legend>Informações Pessoais</legend>
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email" required><br><br>
 
-      <label for="nome">Nome Completo:</label>
-      <input type="text" id="nome" name="nome" required><br>
+        <label for="cpf">CPF:</label>
+        <input type="text" id="cpf" name="cpf" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder="000.000.000-00" required><br><br>
 
-      <label for="email">E-mail:</label>
-      <input type="email" id="email" name="email" required><br>
+        <label for="telefone">Telefone:</label>
+        <input type="tel" id="telefone" name="telefone" pattern="\(\d{2}\) \d{4,5}-\d{4}" placeholder="(00) 00000-0000" required><br><br>
 
-      <label for="cpf">CPF:</label>
-      <input type="text" id="cpf" name="cpf" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder="000.000.000-00" required><br>
+        <label for="nascimento">Data de Nascimento:</label>
+        <input type="date" id="nascimento" name="nascimento" required><br><br>
+    </section>
 
-      <label for="telefone">Telefone:</label>
-      <input type="tel" id="telefone" name="telefone" pattern="\(\d{2}\) \d{4,5}-\d{4}" placeholder="(00) 00000-0000" required><br>
+    <section>
+      <h2>Endereço</h2>
+        <label for="endereco">Endereço:</label>
+        <input type="text" id="endereco" name="endereco" required><br><br>
 
-      <label for="nascimento">Data de Nascimento:</label>
-      <input type="date" id="nascimento" name="nascimento" required><br>
-    </fieldset>
+        <label for="cep">CEP:</label>
+        <input type="text" id="cep" name="cep" pattern="\d{5}-\d{3}" placeholder="00000-000" required><br><br>
 
-    <fieldset>
-      <legend>Endereço</legend>
+        <label for="cidade">Cidade:</label>
+        <input type="text" id="cidade" name="cidade" required><br><br>
 
-      <label for="endereco">Endereço:</label>
-      <input type="text" id="endereco" name="endereco" required><br>
+        <label for="estado">Estado:</label>
+        <select id="estado" name="estado" required>
+          <option value="">Selecione</option>
+          <option value="SP">SP</option>
+          <option value="RJ">RJ</option>
+          <option value="MG">MG</option>
+          <option value="ES">ES</option>
+          <!-- Adicione os outros estados conforme necessário -->
+        </select><br><br>
+    </section>
 
-      <label for="cep">CEP:</label>
-      <input type="text" id="cep" name="cep" pattern="\d{5}-\d{3}" placeholder="00000-000" required><br>
+    <section>
+      <h2>Forma de Colaboração</h2>
+        <label for="tipo_colaboracao">Escolha como deseja colaborar:</label><br>
+        <input type="radio" id="voluntario" name="tipo_colaboracao" value="voluntario">
+        <label for="voluntario">Voluntário</label><br>
+        
+        <input type="radio" id="doacao" name="tipo_colaboracao" value="doacao">
+        <label for="doacao">Doações</label><br><br>
 
-      <label for="cidade">Cidade:</label>
-      <input type="text" id="cidade" name="cidade" required><br>
+        <label for="habilidades">Caso seja voluntário, informe suas habilidades (opcional):</label><br>
+        <textarea id="habilidades" name="habilidades" rows="4" cols="50"></textarea><br><br>
+        
+        <label for="tempo_disponivel">Quanto tempo você tem disponível por semana para ser voluntário?</label><br>
+        <select id="tempo_disponivel" name="tempo_disponivel" required>
+          <option value="">Selecione</option>
+          <option value="menos_de_1h">Menos de 1 hora</option>
+          <option value="1_3h">1 a 3 horas</option>
+          <option value="3_5h">3 a 5 horas</option>
+          <option value="5_10h">5 a 10 horas</option>
+          <option value="mais_de_10h">Mais de 10 horas</option>
+        </select><br><br>
 
-      <label for="estado">Estado:</label>
-      <select id="estado" name="estado" required>
-        <option value="">Selecione</option>
-        <option value="SP">SP</option>
-        <option value="RJ">RJ</option>
-        <option value="MG">MG</option>
-        <option value="ES">ES</option>
-        <!-- adicione os outros estados conforme desejar -->
-      </select>
-    </fieldset>
-
-    <button type="submit">Enviar Cadastro</button>
+        <button type="submit">Enviar Cadastro</button>
+    </section>
   </form>
+
+  </main>
 
   <footer>
     <p>&copy; 2025 Amparo na Rua</p>
