Atualização do código

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Amparo na Rua - Início</title>
+  <title>Amparo na Rua - Ajudando quem precisa</title>
+  <link rel="stylesheet" href="style.css"> <!-- Link para o CSS -->
 </head>
 <body>
+
+  <!-- Cabeçalho com o logotipo no fundo -->
   <header>
     <h1>Amparo na Rua</h1>
     <nav>
@@ -13,34 +16,57 @@
         <li><a href="index.html">Início</a></li>
         <li><a href="projetos.html">Projetos</a></li>
         <li><a href="cadastro.html">Cadastro</a></li>
+        <li><a href="capacitacao.html">Capacitação Profissional</a></li>
       </ul>
     </nav>
   </header>
 
+  <!-- Conteúdo principal -->
   <main>
+    <!-- Seção de Introdução -->
     <section>
       <h2>Quem Somos</h2>
-      <p>A <strong>Amparo na Rua</strong> é uma organização sem fins lucrativos dedicada a oferecer apoio, alimentação, abrigo e oportunidades para pessoas em situação de rua.</p>
-      <img src="img/abrigo.jpg" alt="Abrigo da ONG Amparo na Rua acolhendo pessoas">
+      <p>O <strong>Amparo na Rua</strong> é uma ONG dedicada ao apoio de pessoas em situação de rua. Nossa missão é fornecer acolhimento, alimentação, educação e oportunidades para recomeço. Acreditamos que todos merecem uma chance para uma vida digna.</p>
     </section>
 
+    <!-- Seção de Como Ajudar -->
     <section>
-      <h2>Nossa Missão</h2>
-      <p>Promover dignidade e esperança por meio de ações solidárias, atendimento social e programas de reintegração na sociedade.</p>
+      <h2>Como Você Pode Ajudar</h2>
+      <p>Existem diversas formas de contribuir para nossa causa. Seja voluntário ou faça doações, você pode ajudar transformando vidas. Ao se cadastrar, você escolherá como quer colaborar.</p>
+      <ul>
+        <li>Distribuição de refeições</li>
+        <li>Apoio no abrigo</li>
+        <li>Organização de eventos e campanhas</li>
+        <li>Orientação e apoio social</li>
+        <li>Doação de roupas e alimentos</li>
+      </ul>
+      <a href="cadastro.html">Cadastre-se aqui</a>
     </section>
 
+    <!-- Seção de Projetos -->
     <section>
-      <h2>Contato</h2>
-      <address>
-        <p>Email: <a href="mailto:contato@amparonaruabem.org">contato@amparonaruabem.org</a></p>
-        <p>Telefone: (11) 99888-7766</p>
-        <p>Endereço: Rua da Esperança, 222 - São Paulo/SP</p>
-      </address>
+      <h2>Projetos em Andamento</h2>
+      <p>Conheça alguns dos nossos projetos atuais que estão fazendo a diferença:</p>
+      <ul>
+        <li><strong>Acolhimento e Abrigo</strong>: Fornecimento de abrigo seguro para pessoas em situação de rua.</li>
+        <li><strong>Distribuição de Alimentos</strong>: Refeições diárias para quem mais precisa.</li>
+        <li><strong>Reinserção Social</strong>: Oferecemos cursos e orientação profissional para reintegração no mercado de trabalho.</li>
+      </ul>
+      <a href="projetos.html">Saiba mais sobre nossos projetos</a>
+    </section>
+
+    <!-- Seção de Voluntariado -->
+    <section>
+      <h2>Seja um Voluntário</h2>
+      <p>Junte-se a nós e ajude a transformar a vida de pessoas em situação de vulnerabilidade. Ao se tornar voluntário, você poderá escolher o tipo de ajuda que mais se encaixa nas suas habilidades e disponibilidade.</p>
+      <a href="cadastro.html">Cadastre-se como voluntário</a>
     </section>
   </main>
 
+  <!-- Rodapé -->
   <footer>
-    <p>&copy; 2025 Amparo na Rua - Todos os direitos reservados.</p>
+    <p>&copy; 2025 Amparo na Rua | Todos os direitos reservados</p>
   </footer>
+
 </body>
 </html>
