--- a/projetos.html
+++ b/projetos.html
@@ -14,6 +14,7 @@
         <li><a href="index.html">Início</a></li>
         <li><a href="projetos.html">Projetos</a></li>
         <li><a href="cadastro.html">Cadastro</a></li>
+        <li><a href="capacitacao.html">Capacitação Profissional</a></li>
       </ul>
     </nav>
   </header>
@@ -24,7 +25,7 @@
       <h2>Refeição Solidária</h2>
       <p>Servimos diariamente refeições nutritivas e gratuitas para pessoas em situação de rua, com o apoio de voluntários e doações.</p>
       <div align="center">
-        <img src="img/doacoes.jpg" alt="Doações de alimentos" width="400">
+        <img src="img/doacao.jpg" alt="Doações de alimentos" width="400">
       </div>
     </article>
 
