--- a/cadastro.html
+++ b/cadastro.html
@@ -14,6 +14,7 @@
         <li><a href="index.html">Início</a></li>
         <li><a href="projetos.html">Projetos</a></li>
         <li><a href="cadastro.html">Cadastro</a></li>
+        <li><a href="capacitacao.html">Capacitação Profissional</a></li>
       </ul>
     </nav>
   </header>
