Atualização completa das páginas HTML com melhorias e validações

--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Amparo na Rua - Ajudando quem precisa</title>
-  <link rel="stylesheet" href="style.css"> <!-- Link para o CSS -->
 </head>
 <body>
 
-  <!-- Cabeçalho com o logotipo no fundo -->
   <header>
     <h1>Amparo na Rua</h1>
     <nav>
@@ -21,49 +19,71 @@
     </nav>
   </header>
 
-  <!-- Conteúdo principal -->
   <main>
-    <!-- Seção de Introdução -->
+
     <section>
       <h2>Quem Somos</h2>
-      <p>O <strong>Amparo na Rua</strong> é uma ONG dedicada ao apoio de pessoas em situação de rua. Nossa missão é fornecer acolhimento, alimentação, educação e oportunidades para recomeço. Acreditamos que todos merecem uma chance para uma vida digna.</p>
+      <p>
+        O <strong>Amparo na Rua</strong> é uma Organização Não Governamental (ONG) fundada com o propósito de oferecer
+        apoio e dignidade às pessoas em situação de rua. Atuamos com base nos valores da solidariedade, empatia e respeito,
+        acreditando que toda pessoa merece uma nova oportunidade de recomeçar a vida com dignidade.
+      </p>
+
+      <p>
+        Nosso trabalho vai além de oferecer abrigo e alimentação — buscamos promover a reinserção social através de ações
+        educativas, capacitação profissional e acompanhamento social. Acreditamos que, ao unir forças com voluntários e
+        parceiros, podemos transformar vidas e construir uma sociedade mais justa e humana.
+      </p>
+
+      <p>
+        A ONG atua em diversas frentes, desde o acolhimento emergencial até projetos de formação e inclusão no mercado de
+        trabalho. Com o apoio de doadores, voluntários e empresas parceiras, conseguimos levar esperança e novas
+        perspectivas para centenas de pessoas todos os anos.
+      </p>
+
+      <p>
+        Quer conhecer nossas iniciativas e descobrir como contribuir com essa causa? <br>
+        <a href="projetos.html">Veja nossos projetos em andamento</a>
+      </p>
     </section>
 
-    <!-- Seção de Como Ajudar -->
     <section>
-      <h2>Como Você Pode Ajudar</h2>
-      <p>Existem diversas formas de contribuir para nossa causa. Seja voluntário ou faça doações, você pode ajudar transformando vidas. Ao se cadastrar, você escolherá como quer colaborar.</p>
+      <h2>Principais Ações e Projetos</h2>
+      <p>Conheça algumas das frentes de atuação que estão fazendo diferença nas ruas:</p>
       <ul>
-        <li>Distribuição de refeições</li>
-        <li>Apoio no abrigo</li>
-        <li>Organização de eventos e campanhas</li>
-        <li>Orientação e apoio social</li>
-        <li>Doação de roupas e alimentos</li>
-      </ul>
-      <a href="cadastro.html">Cadastre-se aqui</a>
-    </section>
-
-    <!-- Seção de Projetos -->
-    <section>
-      <h2>Projetos em Andamento</h2>
-      <p>Conheça alguns dos nossos projetos atuais que estão fazendo a diferença:</p>
-      <ul>
-        <li><strong>Acolhimento e Abrigo</strong>: Fornecimento de abrigo seguro para pessoas em situação de rua.</li>
-        <li><strong>Distribuição de Alimentos</strong>: Refeições diárias para quem mais precisa.</li>
-        <li><strong>Reinserção Social</strong>: Oferecemos cursos e orientação profissional para reintegração no mercado de trabalho.</li>
+        <li><strong>Acolhimento e Abrigo:</strong> Oferecemos um espaço seguro, com alimentação, higiene e acolhimento humano.</li>
+        <li><strong>Distribuição de Alimentos:</strong> Realizamos ações semanais de entrega de marmitas e kits de higiene.</li>
+        <li><strong>Reinserção Social:</strong> Promovemos cursos de capacitação e apoio para o retorno ao mercado de trabalho.</li>
       </ul>
       <a href="projetos.html">Saiba mais sobre nossos projetos</a>
     </section>
 
-    <!-- Seção de Voluntariado -->
     <section>
       <h2>Seja um Voluntário</h2>
-      <p>Junte-se a nós e ajude a transformar a vida de pessoas em situação de vulnerabilidade. Ao se tornar voluntário, você poderá escolher o tipo de ajuda que mais se encaixa nas suas habilidades e disponibilidade.</p>
+      <p>Junte-se a nós e ajude a transformar vidas! Nossos voluntários são o coração das nossas ações.</p>
+      <p>Se você tem tempo, disposição e vontade de fazer o bem, cadastre-se e venha participar das nossas atividades sociais.</p>
       <a href="cadastro.html">Cadastre-se como voluntário</a>
     </section>
+
+    <section>
+      <h2>Entre em Contato</h2>
+      <p>Quer saber mais sobre o <strong>Amparo na Rua</strong>, nossos projetos ou como ajudar? Fale conosco!</p>
+      <ul>
+        <li><strong>Telefone:</strong> (11) 99999-9999</li>
+        <li><strong>E-mail:</strong> contato@amparonarua.org.br</li>
+        <li><strong>Endereço:</strong> Rua da Solidariedade, 123 - São Paulo, SP</li>
+      </ul>
+
+      <p>Siga nossas redes sociais:</p>
+      <ul>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">LinkedIn</a></li>
+      </ul>
+    </section>
+
   </main>
 
-  <!-- Rodapé -->
   <footer>
     <p>&copy; 2025 Amparo na Rua | Todos os direitos reservados</p>
   </footer>
