--- a/capacitacao.html
+++ b/capacitacao.html
@@ -3,56 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Página da ONG Amparo na Rua mostrando como você pode ajudar, tornando-se voluntário e ensinando habilidades profissionais.">
   <title>Amparo na Rua - Como Você Pode Ajudar</title>
-  
 </head>
 <body>
 
+  <!-- Link de acessibilidade -->
+  <a href="#introducao">Pular para o conteúdo principal</a>
+
   <header>
     <h1>Como Você Pode Ajudar</h1>
-    <nav>
+    <nav aria-label="Menu principal">
       <ul>
         <li><a href="index.html">Início</a></li>
         <li><a href="projetos.html">Projetos</a></li>
         <li><a href="cadastro.html">Cadastro</a></li>
-        <li><a href="capacitacao.html">Capacitação Profissional</a></li> <!-- Link para a nova página -->
+        <li><a href="capacitacao.html">Capacitação Profissional</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <section id="introducao">
-      <h2>Seja um Voluntário</h2>
-      <p>Você pode fazer a diferença na vida de muitas pessoas. Se você tem alguma habilidade e deseja compartilhá-la, nós precisamos de você! Cada ação conta, e você pode ajudar de diversas formas.</p>
-    </section>
+    <article>
+      <!-- 🔹 Título principal do artigo -->
+      <h2>Como Contribuir com a ONG Amparo na Rua</h2>
 
-    <section id="habilidades">
-      <h2>Profissões e Habilidades que Podemos Ensinar</h2>
-      <p>A ONG Amparo na Rua oferece oportunidades para voluntários ensinarem diversas habilidades a pessoas em situação de rua, ajudando-as a ter novas chances no mercado de trabalho.</p>
+      <section id="introducao">
+        <h3>Seja um Voluntário</h3>
+        <p>Você pode fazer a diferença na vida de muitas pessoas. Se você tem alguma habilidade e deseja compartilhá-la, nós precisamos de você! Cada ação conta, e você pode ajudar de diversas formas.</p>
+      </section>
 
-      <ul>
-        <li><strong>Carpinteiro:</strong> Ensinar o trabalho com madeira, criação de móveis e utensílios.</li>
-        <li><strong>Eletricista:</strong> Formação em instalações elétricas.</li>
-        <li><strong>Cozinheiro(a):</strong> Habilidades culinárias e panificação.</li>
-        <li><strong>Designer Gráfico:</strong> Ensino de design e criação de conteúdo visual.</li>
-        <li><strong>Marketing Digital:</strong> Como usar as redes sociais para promover pequenos negócios.</li>
-        <li><strong>Cabeleireiro(a):</strong> Técnicas de cortes de cabelo e cuidados estéticos.</li>
-        <li><strong>Assistente Social:</strong> Apoio e orientação para reintegração social.</li>
-        <li><strong>Artesanato:</strong> Produção e venda de itens artesanais.</li>
-      </ul>
+      <section id="habilidades">
+        <h3>Profissões e Habilidades que Podemos Ensinar</h3>
+        <p>A ONG Amparo na Rua oferece oportunidades para voluntários ensinarem diversas habilidades a pessoas em situação de rua, ajudando-as a ter novas chances no mercado de trabalho.</p>
 
-      <p>Você pode ensinar outras habilidades também. Caso tenha algum conhecimento que gostaria de compartilhar, fique à vontade para nos contar!</p>
-    </section>
+        <ul>
+          <li><strong>Carpinteiro:</strong> Ensinar o trabalho com madeira, criação de móveis e utensílios.</li>
+          <li><strong>Eletricista:</strong> Formação em instalações elétricas.</li>
+          <li><strong>Cozinheiro(a):</strong> Habilidades culinárias e panificação.</li>
+          <li><strong>Designer Gráfico:</strong> Ensino de design e criação de conteúdo visual.</li>
+          <li><strong>Marketing Digital:</strong> Como usar as redes sociais para promover pequenos negócios.</li>
+          <li><strong>Cabeleireiro(a):</strong> Técnicas de cortes de cabelo e cuidados estéticos.</li>
+          <li><strong>Assistente Social:</strong> Apoio e orientação para reintegração social.</li>
+          <li><strong>Artesanato:</strong> Produção e venda de itens artesanais.</li>
+        </ul>
 
-    <section id="cadastro-voluntario">
-      <h2>Cadastre-se Como Voluntário</h2>
-      <p>Se você deseja contribuir com sua experiência, faça seu cadastro e nos ajude a transformar vidas. Escolha a habilidade que você gostaria de ensinar ou contribuir!</p>
-      <a href="cadastro.html">Clique aqui para se cadastrar</a>
-    </section>
+        <p>Você pode ensinar outras habilidades também. Caso tenha algum conhecimento que gostaria de compartilhar, fique à vontade para nos contar!</p>
+      </section>
+
+      <section id="cadastro-voluntario">
+        <h3>Cadastre-se Como Voluntário</h3>
+        <p>Se você deseja contribuir com sua experiência, faça seu cadastro e nos ajude a transformar vidas. Escolha a habilidade que você gostaria de ensinar ou contribuir!</p>
+        <a href="cadastro.html" title="Ir para o formulário de cadastro de voluntários">Clique aqui para se cadastrar</a>
+      </section>
+
+    </article>
   </main>
 
   <footer>
     <p>&copy; 2025 Amparo na Rua</p>
+    <p>Contato: <a href="mailto:contato@amparonarua.org">contato@amparonarua.org</a></p>
   </footer>
 
 </body>
