--- a/projetos.html
+++ b/projetos.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projetos - Amparo na Rua</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+  <!-- Cabeçalho -->
   <header>
     <h1>Projetos Amparo na Rua</h1>
     <nav>
@@ -19,23 +21,27 @@
     </nav>
   </header>
 
+  <!-- Conteúdo principal -->
   <main>
 
+    <!-- Projeto 1 -->
     <article>
       <h2>Refeição Solidária</h2>
-      <p>Servimos diariamente refeições nutritivas e gratuitas para pessoas em situação de rua, com o apoio de voluntários e doações.</p>
+      <p>Servimos diariamente refeições nutritivas e gratuitas para pessoas em situação de rua, com o apoio de voluntários e doações. Este projeto é essencial para garantir alimentação digna e acolhimento humano nas ruas.</p>
       <img src="img/doacao.jpg" alt="Doações de alimentos" width="400">
     </article>
 
+    <!-- Projeto 2 -->
     <article>
       <h2>Acolhimento e Reintegração</h2>
-      <p>Nosso abrigo oferece um espaço seguro, cuidados básicos e apoio psicológico. Também auxiliamos na busca de emprego e documentação.</p>
+      <p>Nosso abrigo oferece um espaço seguro, cuidados básicos e apoio psicológico. Também auxiliamos na busca de emprego, documentação e reinserção social, ajudando pessoas a reconstruírem suas histórias com dignidade.</p>
       <img src="img/abrigo.jpg" alt="Abrigo comunitário" width="400">
     </article>
 
+    <!-- Projeto 3: Voluntariado -->
     <article id="voluntariado">
       <h2>Voluntariado - Como você pode ajudar</h2>
-      <p>Você pode fazer a diferença! Os voluntários ajudam em diversas atividades. Ao se cadastrar, você poderá informar suas habilidades e escolher a forma de ajudar que mais combina com você.</p>
+      <p>O <strong>Amparo na Rua</strong> conta com voluntários dedicados que fazem toda a diferença. Ao se cadastrar, você poderá escolher atividades de acordo com suas habilidades e disponibilidade.</p>
       
       <ul>
         <li>Distribuição de refeições</li>
@@ -47,15 +53,46 @@
         <li>Orientação e apoio social</li>
       </ul>
 
-      <p>Se você quer fazer parte dessa transformação, <a href="cadastro.html">cadastre-se aqui</a> e venha ajudar!</p>
+      <p>
+        Você também pode ajudar compartilhando seus conhecimentos! <br>
+        <strong>Voluntários que desejam ensinar uma profissão</strong> ou oferecer oficinas podem contribuir com nosso programa de 
+        <a href="capacitacao.html">Capacitação Profissional</a>.
+      </p>
+
+      <p>Quer fazer parte dessa transformação? <a href="cadastro.html">Cadastre-se aqui</a> e seja voluntário!</p>
 
       <img src="img/voluntarios.jpg" alt="Voluntários em ação" width="400">
     </article>
 
+    <!-- 🧡 Nova seção: Doações -->
+    <article id="doacoes">
+      <h2>Doações - Sua ajuda transforma vidas</h2>
+      <p>As doações são fundamentais para manter nossos projetos e ampliar o número de pessoas atendidas. Toda contribuição, seja em dinheiro ou em bens, ajuda a proporcionar mais dignidade e esperança.</p>
+
+      <h3>Formas de Doar</h3>
+      <ul>
+        <li><strong>Doação em dinheiro:</strong> Depósitos e transferências bancárias</li>
+        <li><strong>Doação de roupas e alimentos:</strong> Entregas presenciais em nossos pontos de coleta</li>
+        <li><strong>Doação online:</strong> Faça uma contribuição rápida e segura pelo nosso site</li>
+      </ul>
+
+      <!-- Simulação de botão de doação online -->
+      <p><a href="#" class="botao-doar">Fazer Doação Online</a></p>
+
+      <h3>Dados bancários</h3>
+      <p><strong>Banco:</strong> Banco do Brasil<br>
+      <strong>Agência:</strong> 1234-5<br>
+      <strong>Conta:</strong> 98765-4<br>
+      <strong>Pix:</strong> contato@amparonarua.org.br</p>
+
+      <img src="img/doacao-online.jpg" alt="Pessoa realizando doação online" width="400">
+    </article>
+
   </main>
 
+  <!-- Rodapé -->
   <footer>
-    <p>&copy; 2025 Amparo na Rua</p>
+    <p>&copy; 2025 Amparo na Rua | Todos os direitos reservados</p>
   </footer>
 
 </body>
