Descrição das alterações feitas no projeto

--- a/projetos.html
+++ b/projetos.html
@@ -28,7 +28,7 @@
     <article>
       <h2>Refeição Solidária</h2>
       <p>Servimos diariamente refeições nutritivas e gratuitas para pessoas em situação de rua, com o apoio de voluntários e doações. Este projeto é essencial para garantir alimentação digna e acolhimento humano nas ruas.</p>
-      <img src="img/doacao.jpg" alt="Doações de alimentos" width="400">
+      <img src="img/voluntarios.jpg" alt="Doações de alimentos" width="400">
     </article>
 
     <!-- Projeto 2 -->
@@ -61,7 +61,7 @@
 
       <p>Quer fazer parte dessa transformação? <a href="cadastro.html">Cadastre-se aqui</a> e seja voluntário!</p>
 
-      <img src="img/voluntarios.jpg" alt="Voluntários em ação" width="400">
+      <img src="img/doacao.jpg" alt="Voluntários em ação" width="400">
     </article>
 
     <!-- 🧡 Nova seção: Doações -->
